--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SAMID"
         tools:targetApi="31">
-        <activity android:name=".MainActivity"
-            android:exported="true"/>
+        <activity
+            android:name=".HomeActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true" />
         <activity
             android:name=".MainActivity3_landing"
             android:exported="false" />
@@ -22,8 +28,8 @@
             android:exported="false" />
         <activity
             android:name=".SplashScreen"
-            android:theme="@style/SplashScreen"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
