I fixed the icon problem and change the name of the landing file to the device status

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:name=".MainActivity"
             android:exported="true" />
         <activity
-            android:name=".MainActivity3_landing"
+            android:name=".DeviceStatus"
             android:exported="false" />
         <activity
             android:name=".MainActivity2"
