agrege el menu en DeviceStatus y ya pude solucionar el problema de el cambio de color dependiendo de el tema del dispositivo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,12 @@
         <activity
             android:name=".HomeActivity"
             android:exported="true">
-
         </activity>
-
         <activity
             android:name=".MainActivity"
+            android:exported="true" />
+        <activity
+            android:name=".PatientsView"
             android:exported="true" />
         <activity
             android:name=".DeviceStatus"
