Agrege la pantalla patients view y la conecte al menu, el menu ya tiene las redirecciones correctas

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
             android:name=".DeviceStatus"
             android:exported="false" />
         <activity
+            android:name=".WeeklyStats"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity2"
             android:exported="false" />
         <activity
