agrege una pantalla de carga y la pantalla de check_now.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
             android:name=".WeeklyStats"
             android:exported="false" />
         <activity
+            android:name=".CheckNow"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity2"
             android:exported="false" />
         <activity
