--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ activity = "1.9.2"
 constraintlayout = "2.1.4"
 materialVersion = "1.12.0"
 mpandroidchart = "v3.1.0"
+playServicesMaps = "19.0.0"
 
 [libraries]
 androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activity" }
@@ -45,6 +46,7 @@ material-v1100 = { module = "com.google.android.material:material", version.ref 
 #noinspection SimilarGradleDependency
 material-v121 = { module = "com.google.android.material:material", version.ref = "materialVersion" }
 mpandroidchart = { module = "com.github.PhilJay:MPAndroidChart", version.ref = "mpandroidchart" }
+play-services-maps = { group = "com.google.android.gms", name = "play-services-maps", version.ref = "playServicesMaps" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
