--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SAMID"
         tools:targetApi="31"
-        android:networkSecurityConfig="@xml/network_security_config" >
+        android:networkSecurityConfig="@xml/network_security_config">
 
         <activity
             android:name=".AlarmsViewActivity"
@@ -70,8 +70,8 @@
             android:name=".MainActivity2"
             android:exported="false" />
         <activity
-            android:name=".WebsocketImplementation"
-            android:exported="false" />
+        android:name="com.example.samid.WebsocketImplementation"
+        android:exported="false" />
         <activity
             android:name=".SplashScreen"
             android:exported="true"
