--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,8 @@ okhttp = "4.9.3"
 playServicesMaps = "19.0.0"
 kotlinx-coroutines = "1.5.1"
 cardview = "1.0.0"
+jtds="1.3.1"
+libpcs="1.0.4"
 
 [libraries]
 okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
@@ -57,6 +59,10 @@ material-v1100 = { module = "com.google.android.material:material", version.ref 
 material-v121 = { module = "com.google.android.material:material", version.ref = "materialVersion" }
 play-services-maps = { group = "com.google.android.gms", name = "play-services-maps", version.ref = "playServicesMaps" }
 androidx-cardview = { group = "androidx.cardview", name = "cardview", version.ref = "cardview" }
+#Conector para Sql server
+sourceforge-jtds = { module = "net.sourceforge.jtds:jtds", version.ref = "jtds"}
+#Libreria de utilidades
+libreria-pcs = { module = "com.github.programadorescs:LibreriaPcs", version.ref = "libpcs"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
