--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,7 @@ cardview = "1.0.0"
 jtds="1.3.1"
 libpcs="1.0.4"
 firebaseFirestoreKtx = "25.1.1"
+firebaseAuthKtx = "23.1.0"
 
 [libraries]
 okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
@@ -65,6 +66,7 @@ sourceforge-jtds = { module = "net.sourceforge.jtds:jtds", version.ref = "jtds"}
 #Libreria de utilidades
 libreria-pcs = { module = "com.github.programadorescs:LibreriaPcs", version.ref = "libpcs"}
 firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-firestore-ktx", version.ref = "firebaseFirestoreKtx" }
+firebase-auth-ktx = { group = "com.google.firebase", name = "firebase-auth-ktx", version.ref = "firebaseAuthKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
